--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
-    "@rollup/plugin-babel": "^5.1.0"
+    "@rollup/plugin-babel": "^5.1.0",
+    "rollup-plugin-typescript": "^1.0.1",
+    "tslib": "^2.0.0",
+    "typescript": "^3.9.6"
   }
 }
